Bug 97885 - SIDEBAR: Message missing from blank properties tab
Summary: SIDEBAR: Message missing from blank properties tab
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
5.1.0.3 release
Hardware: All All
: medium normal
Assignee: Fabio Buso
URL:
Whiteboard: target:5.2.0
Keywords: bibisected, regression
Depends on:
Blocks: Sidebar-Properties
  Show dependency treegraph
 
Reported: 2016-02-15 22:27 UTC by Yousuf Philips (jay) (retired)
Modified: 2016-10-24 16:27 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2016-02-15 22:27:09 UTC
Steps:
1) Open Draw
2) Notice that there is no message in the the Properties tab under the 'Properties' title.

Regression as the message is there in 5.0.4. Previously a blank Properties tab had the message 'Properties for the task that you are preforming are not available for the current selection'.

Hopefully a variant of the page tab (bug 83830) or slide section (bug 89466) can be added to Draw so that its not blank, but as the sidebar is open by default since 5.0, it isnt good UX to see a blank tab and not know why.

Version: 5.2.0.0.alpha0+
Build ID: fea95da81260bc7eabe7ece595829009b2db3e62
CPU Threads: 2; OS Version: Linux 4.2; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-02-10_01:41:22
Locale: en-US (en_US.UTF-8)
Comment 2 V Stuart Foote 2016-02-16 01:36:02 UTC
Here is a bit tighter bibisect

https://cgit.freedesktop.org/libreoffice/core/log/?qt=range&q=186f365a2c541c51e404b1fa819f35c9152adaf1..01de2fc790b50c04f13907026f1a7782009fea61

Between 
Version: 5.1.0.0.alpha1+ (x64)
Build ID: 186f365a2c541c51e404b1fa819f35c9152adaf1
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-11-19_23:26:12
Locale: en-US (en_US)

and 
Version: 5.1.0.0.alpha1+ (x64)
Build ID: 01de2fc790b50c04f13907026f1a7782009fea61
TinderBox: Win-x86_64@42, Branch:master, Time: 2015-11-21_01:52:58
Locale: en-US (en_US)

@Bubli, Laurent -- thoughts?
Comment 3 raal 2016-02-19 12:10:58 UTC
 36240fe0b31166f9a1cfed4c925d9cf2e199d1ff is the first bad commit
commit 36240fe0b31166f9a1cfed4c925d9cf2e199d1ff
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Fri Nov 20 22:10:53 2015 -0800

    source 8f7025b50f50839a30565d2308dcf340bbf46a97

    source 8f7025b50f50839a30565d2308dcf340bbf46a97
    source 4f4a4d7eb6438cb35a82545d59d01259ba79cc96
    source f28420515c380de646db507be92312e26afaffcb
    source ec5250dcc63f5c83c9747bbd7e2aae57291a5e8e
    source 8e0ef3a3964ff6b43adfa173c2286e437f36f2bc
    source c2ef6387de22d76537e44ec74bd13d718f915814
    source de37e7ae4808dc9cdd84a8c21411958ed51db5b6
    source 536c259cb9644971d0eb0cdfb7d823c5383a5481
    source ce6170dafe0159e2a1d689133c070b25fa39dd12
    source 4f69d0810e76f17b2a24f74dc99c4b8a31ac63b7
    source 6c1c9c4a57ca29c2ba8749a945a476f082ccac44
    source ccf9d889fd3b21473e201b0d25a714d10474bc96
    source 0f5d0aaed33d68cb6fe52d693d351dda79b990bc
    source 2e1d74dc4fb4590fd7ded360457ad867a9002e94
    source 60e61e4434b3c8443bfa1303122be6a9773a70f2
    source 275ccca3d266e8ffd837b53a35bc2cbd6cb95660
    source fafac0d248c3ebc8eb9a9cef5fa68f193d851b33
    source b55fb34c4baab993cf3286448b6c00b5ae095be0
    source 45d1abeff9d4041b3e174f0eddd10bfd6ab8a360
    source e5c55a6f99052d71505ca97d7a1ef3822960cbba
    source b8793748b0eaaa3fe405587fcb2a3021adab833b

:040000 040000 fdc645694b6ac12b1a3039e57428e1eacf06bf64 7d4c940c3c431b51f890f3b5f74c7741add79cfe M      instdir

This one?
	author	Laurent Godard <lgodard.libre@laposte.net>	2015-08-25 14:38:43 (GMT)
committer	Katarina Behrens <Katarina.Behrens@cib.de>	2015-11-20 13:33:29 (GMT)
commit 536c259cb9644971d0eb0cdfb7d823c5383a5481 (patch)
tree 9f9fd6d655fe9ff492e0f5c317be4d75e21d9ea4
parent ce6170dafe0159e2a1d689133c070b25fa39dd12 (diff)
tdf#67770 store sidebar elements states
Comment 4 Pranav Ganorkar 2016-02-29 06:42:51 UTC
Hi, I will be working on this bug.
Comment 5 Pranav Ganorkar 2016-02-29 07:19:00 UTC
Can I get some code pointers related to this bug ?
Comment 6 Yousuf Philips (jay) (retired) 2016-02-29 08:26:17 UTC
Hi Pranav,

You can look over this commit and try to figure out what cause the message to disappear.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=536c259cb9644971d0eb0cdfb7d823c5383a5481
Comment 7 Commit Notification 2016-03-14 22:05:33 UTC
Fabio Buso committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=575b1efb193ac5e921b83ead157c1c639aec0e92

tdf#97885 SIDEBAR: Message missing from blank properties tab

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.