tdf#97885 SIDEBAR: Message missing from blank properties tab

Change-Id: If810c351644ef80d3882b34861fde0400236bdf3