include/sfx2/sidebar/SidebarController.hxx
@@ -151,8 +151,7 @@ public:
     void SwitchToDeck ( const ::rtl::OUString& rsDeckId);
     void SwitchToDefaultDeck();
 
-    void CreateDeck(const ::rtl::OUString& rDeckId, bool bForceCreate = false);
-    void CreatePanels(const ::rtl::OUString& rDeckId);
+    void CreateDeck(const ::rtl::OUString& rDeckId);
 
     ResourceManager::DeckContextDescriptorContainer GetMatchingDecks();
     ResourceManager::PanelContextDescriptorContainer GetMatchingPanels( const ::rtl::OUString& rDeckId);
@@ -220,6 +219,9 @@ private:
         const bool bWantsCanvas,
         const Context& rContext);
 
+    void CreatePanels(
+        const ::rtl::OUString& rDeckId,
+        const Context& rContext);
     VclPtr<Panel> CreatePanel (
         const ::rtl::OUString& rsPanelId,
         vcl::Window* pParentWindow,
@@ -227,9 +229,14 @@ private:
         const Context& rContext,
         VclPtr<Deck> pDeck);
 
+    void CreateDeck(
+        const ::rtl::OUString& rDeckId,
+        const Context& rContext,
+        bool bForceCreate = false);
     void SwitchToDeck (
         const DeckDescriptor& rDeckDescriptor,
         const Context& rContext);
+
     void ShowPopupMenu (
         const Rectangle& rButtonBox,
         const ::std::vector<TabBar::DeckMenuData>& rMenuData) const;
